The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/09/23 17:30:00 CDT
Tag: blume-20040923-envvars
Description:

1. Changed definition of type ControlRegistry.registry_tree to
   include control_info (i.e., the name of the controlling environment
   variable).

2. Added command-line flags -e and -E to print the names of environment
   variables that can be used to control internal settings.
   (This uses the new API mentioned in 1.)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/09/13 16:50:00 CDT
Tag: Release_110_49
Description:

New working version (110.49).  NEW BOOTFILES!

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2004/09/13 16:20:00 CDT
Tag: blume-20040913-config-mlrisc
Description:

Put target "mlrisc" back into the default list.
(There is no harm in having it, and some users have expressed their
wish to have "mlrisc" included by default.)

----------------------------------------------------------------------
Name: John Reppy
Date: 2004/09/13
Tag: jhr-20040913-signals
Description:

Fixed the signal masking code to properly nest mask/unmask operations
on a per-signal basis.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/09/08 13:20:00 CDT
Tag: blume-20040908-heap-magic
Description:

Bumped the heap macig number to 0x09082004 to account for the changed
layout of the ML frame under MacOS X.

----------------------------------------------------------------------
Name: Allen Leung (leunga (at) reservoir (dot) com)