@@ -165,9 +165,6 @@ PVT char *fesetround (char *rm)
 #define RMODE_EQ(RM1, RM2)	(strcmp((RM1), (RM2)) == 0)
 
 #elif defined(OPSYS_DARWIN)
-/*
- * For some reason cc does not like the __asm__ used in architecture/ppc/fp_regs.h
- *
 #   include <architecture/ppc/fp_regs.h>
 #   define FE_TONEAREST RN_NEAREST
 #   define FE_UPWARD RN_TOWARD_PLUS
@@ -176,15 +173,12 @@ PVT char *fesetround (char *rm)
     typedef ppc_fp_rn_t  fe_rnd_mode_t;
     PVT fe_rnd_mode_t fegetround() { return(get_fp_scr()).rn; }
     PVT fe_rnd_mode_t fesetround(fe_rnd_mode_t rm) {
-	fe_rnd_mode_t old = fegetround();
-	
-	(get_fp_scr()).rn = rm;
+	ppc_fp_scr_t fpstate = get_fp_scr();
+	fe_rnd_mode_t old = fpstate.rn;
+	fpstate.rn = rm;
+	set_fp_scr(fpstate);
 	return (old);
     }
- *
- */
-#define NO_ROUNDING_MODE_CTL
-
 #else
 #  error do not know about FP dependencies
 #endif
