@@ -14,6 +14,15 @@ Description:
 
 ----------------------------------------------------------------------
 Name: Matthias Blume (blume (at) tti - c (dot) org)
+Date: 2004/09/24 16:05:00 CDT
+Tag: blume-20040924-rounding
+Description:
+
+Applied patch for setting rounding modes under Mac OS X.  Thanks to
+Melissa O'Neill for providing the code!
+
+----------------------------------------------------------------------
+Name: Matthias Blume (blume (at) tti - c (dot) org)
 Date: 2004/09/23 17:30:00 CDT
 Tag: blume-20040923-envvars
 Description:
